[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sesameos3"
version = "0.1.0"
description = "Python library for SesameOS3 Bluetooth communication"
requires-python = ">=3.8"
dependencies = [
    "bleak>=0.19.0",
    "pycryptodome>=3.15.0",
]

[tool.setuptools.packages.find]
include = ["sesameos3"]